<resources>
    <string name="app_name">jerry_store_xml</string>
    <string name="jerry">jerry</string>
    <string name="hi_jerry">Hi, Jerry 👋🏻</string>
    <string name="top_bar_text">Which Tom do you want to buy?</string>
    <string name="notification">notification</string>
    <string name="_3">3</string>
    <string name="search_about_tom">Search about tom...</string>
    <string name="ellipse_2">ellipse_2</string>
    <string name="ellipse_1">ellipse_1</string>
    <string name="filter_icon">filter icon</string>
    <string name="tom_picture">tom picture</string>
    <string name="buy_1_tom_and_get_2_for_free">Buy 1 Tom and get 2 for free</string>
    <string name="adopt_tom_free_fail_free_guarantee">Adopt Tom! (Free Fail-Free\nGuarantee) </string>
    <string name="cheap_tom_section">Cheap tom section</string>
    <string name="view_all">View all</string>
    <string name="right_arrow">right arrow</string>
    <string name="sport_tom">Sport Tom</string>
    <string name="he_runs_1_meter_trips_over_his_boot">He runs 1 meter... trips over his boot.</string>
    <string name="button_price_1"><strike>5</strike> 3 cheeses</string>
    <string name="button_price_2">5 cheeses</string>
    <string name="button_price_3">10 cheeses</string>
    <string name="button_price_4">12 cheeses</string>
    <string name="card_image">card_image</string>
    <string name="add_to_cart_icon">add to cart icon</string>
    <string name="tom_the_lover">Tom the lover</string>
    <string name="he_loves_one_sidedly_and_is_beaten_by_the_other_side">He loves one-sidedly... and is beaten by the other side.</string>
    <string name="tom_the_bomb">Tom the bomb</string>
    <string name="he_blows_himself_up_before_jerry_can_catch_him">He blows himself up before Jerry can catch him.</string>
    <string name="spy_tom">Spy Tom</string>
    <string name="disguises_itself_as_a_table">Disguises itself as a table.</string>
    <string name="frozen_tom">Frozen tom</string>
    <string name="he_was_chasing_jerry_he_froze_after_the_first_look">He was chasing Jerry, he froze after the first look</string>
    <string name="sleeping_tom">Sleeping Tom</string>
    <string name="he_doesn_t_chase_anyone_he_just_snores_in_stereo">He doesn\'t chase anyone, he just snores in stereo.</string>

</resources>