<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/jerry"
            android:src="@drawable/jerry_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/MediumText.normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/hi_jerry"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_bar_text"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/notification_background"
            android:contentDescription="@string/notification"
            android:padding="8dp"
            android:src="@drawable/ic_notification"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            style="@style/MediumText.small"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/notification_number_background"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:background="@drawable/search_bar_rounded_background"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="12dp"
            android:hint="@string/search_about_tom"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            android:textColor="#333333"
            android:textColorHint="#969799"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_normal"
            android:backgroundTint="#03578A"
            android:contentDescription="@string/filter_icon"
            android:padding="12dp"
            android:src="@drawable/ic_filter"
            app:layout_constraintBottom_toBottomOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText"
            app:layout_constraintTop_toTopOf="@+id/editText" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tom_picture"
            android:src="@drawable/tom"
            android:translationZ="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/ellipse_2"
            android:src="@drawable/ellipse_2"
            android:translationZ="3dp"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/ellipse_1"
            android:src="@drawable/ellipse_1"
            android:translationZ="2dp"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="92dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/gradient_tom_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ibm_plex_sans_arabic_semi_bold"
            android:text="@string/buy_1_tom_and_get_2_for_free"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:ignore="RtlSymmetry" />

        <TextView
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/adopt_tom_free_fail_free_guarantee"
            android:textColor="#CCFFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView4"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ibm_plex_sans_arabic_semi_bold"
            android:text="@string/cheap_tom_section"
            android:textColor="#1F1F1E"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/ibm_plex_sans_arabic_medium"
            android:text="@string/view_all"
            android:textColor="#03578A"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/right_arrow"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <include
            android:id="@+id/myCard_1"
            layout="@layout/sport_tom_card"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/myCard_2"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />

        <include
            android:id="@+id/myCard_2"
            layout="@layout/tom_the_lover_card"
            android:layout_width="0dp"
            android:layout_height="220dp"
            app:layout_constraintStart_toEndOf="@+id/myCard_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/myCard_1" />

        <include
            android:id="@+id/myCard_3"
            layout="@layout/tom_the_bomb"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@id/myCard_1"
            app:layout_constraintEnd_toEndOf="@id/myCard_1"
            app:layout_constraintTop_toBottomOf="@id/myCard_1"/>

        <include
            android:id="@+id/myCard_4"
            layout="@layout/spy_tom_card"
            android:layout_width="0dp"
            android:layout_height="220dp"
            app:layout_constraintStart_toStartOf="@id/myCard_2"
            app:layout_constraintEnd_toEndOf="@id/myCard_2"
            app:layout_constraintTop_toTopOf="@id/myCard_3"
            app:layout_constraintBottom_toBottomOf="@id/myCard_3"/>

        <include
            android:id="@+id/myCard_5"
            layout="@layout/frozen_tom"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@id/myCard_3"
            app:layout_constraintEnd_toEndOf="@id/myCard_3"
            app:layout_constraintTop_toBottomOf="@id/myCard_3"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <include
            android:id="@+id/myCard_6"
            layout="@layout/sleeping_tom"
            android:layout_width="0dp"
            android:layout_height="220dp"
            app:layout_constraintStart_toStartOf="@id/myCard_4"
            app:layout_constraintEnd_toEndOf="@id/myCard_4"
            app:layout_constraintTop_toTopOf="@id/myCard_5"
            app:layout_constraintBottom_toBottomOf="@id/myCard_5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
