<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:clipChildren="false">

    <View
        android:id="@+id/card_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/card_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:contentDescription="@string/card_image"
        android:src="@drawable/tom_card_5"
        app:layout_constraintEnd_toEndOf="@+id/card_background"
        app:layout_constraintStart_toStartOf="@+id/card_background"
        app:layout_constraintTop_toTopOf="@+id/card_background" />

    <TextView
        android:id="@+id/card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ibm_plex_sans_arabic_semi_bold"
        android:text="@string/frozen_tom"
        android:textColor="#1F1F1E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/card_background"
        app:layout_constraintStart_toStartOf="@+id/card_background"
        app:layout_constraintTop_toBottomOf="@+id/card_image" />

    <TextView
        android:id="@+id/card_description"
        style="@style/RegularText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/he_was_chasing_jerry_he_froze_after_the_first_look"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/card_background"
        app:layout_constraintStart_toStartOf="@+id/card_background"
        app:layout_constraintTop_toBottomOf="@+id/card_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/card_button"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        app:icon="@drawable/ic_money_bag"
        app:iconPadding="4dp"
        app:iconGravity="textStart"
        android:padding="0dp"
        android:insetTop="0dp"
        app:cornerRadius="8dp"
        android:insetBottom="0dp"
        app:iconTint="#03578A"
        android:text="@string/button_price_1"
        android:textColor="#03578A"
        android:textSize="12sp"
        android:backgroundTint="#E9F6FB"
        app:layout_constraintBottom_toBottomOf="@+id/card_background"
        app:layout_constraintStart_toStartOf="@+id/card_background"
        app:layout_constraintEnd_toStartOf="@+id/card_notification"/>


    <ImageView
        android:id="@+id/card_notification"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/small_rounded_border"
        android:contentDescription="@string/add_to_cart_icon"
        android:elevation="0dp"
        android:padding="8dp"
        android:src="@drawable/ic_add_to_cart"
        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_button"
        app:layout_constraintEnd_toEndOf="@+id/card_background"
        app:layout_constraintStart_toEndOf="@+id/card_button"
        app:layout_constraintTop_toTopOf="@+id/card_button" />

</androidx.constraintlayout.widget.ConstraintLayout>